Background 'circles' correctly managed for better readability.

--- a/styles/sass/abstracts/_variables.scss
+++ b/styles/sass/abstracts/_variables.scss
@@ -1,8 +1,6 @@
 :root {
     --color-primary: #77b6ea;
     --color-secondary: #93e5ab;
-    --color-primary-faded: rgba(119, 182, 234, 0.1);
-    --color-secondary-faded: rgba(147, 229, 171, 0.1);
     --color-white: #ffffff;
     --color-black: #000;
     --color-grey-1: #272838;
