--- a/styles/sass/pages/_frontpage.scss
+++ b/styles/sass/pages/_frontpage.scss
@@ -1,4 +1,7 @@
 @import '../abstracts/_variables.scss';
+// Imports styles for background 'circle' styles.
+@import '../abstracts/_mixins/circle';
+@import '../abstracts/_placeholders/circle';
 
 .front-page {
     display: flex;
@@ -66,60 +69,48 @@ h1 {
 
 ======================== */
 
-.circle-1 {
-    overflow: hidden;
-    position: absolute;
-    width: 25vw;
-    height: 25vw;
+.circle-FP-1 {
+    @include circle-HeightWidth(25vw);
+    @extend %circle;
     bottom: 0;
     right: 0;
 }
 
-.circle-1::before {
-    content: "";
+.circle-FP-1::before {
+    @include circle-HeightWidth(100%);
+    @extend %circle-translated;
+    background-color: var(--color-primary);
     transform: translate(40%, 40%);
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    border-radius: 50%;
-    background-color: var(--color-primary-faded);
 }
 
-.circle-2 {
-    position: absolute;
-    width: 15vw;
-    height: 15vw;
+.circle-FP-2 {
+    @include circle-HeightWidth(15vw);
+    @extend %circle;
+    background-color: var(--color-secondary);
+    border-radius: 50%;
     top: 16rem;
     right: 20rem;
-    border-radius: 50%;
-    background-color: var(--color-secondary-faded);
 }
 
-.circle-3 {
-    position: absolute;
-    width: 15vw;
-    height: 15vw;
+.circle-FP-3 {
+    @include circle-HeightWidth(15vw);
+    @extend %circle;
+    background-color: var(--color-secondary);
+    border-radius: 50%;
     bottom: 8rem;
     left: 2rem;
-    border-radius: 50%;
-    background-color: var(--color-secondary-faded);
 }
 
-.circle-4 {
-    overflow: hidden;
-    position: absolute;
-    width: 10vw;
-    height: 10vw;
+.circle-FP-4 {
+    @include circle-HeightWidth(10vw);
+    @extend %circle;
     top: 0;
     left: 30rem;
 }
 
-.circle-4::before {
-    content: "";
+.circle-FP-4::before {
+    @include circle-HeightWidth(100%);
+    @extend %circle-translated;
+    background-color: var(--color-primary);
     transform: translate(0, -50%);
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    border-radius: 50%;
-    background-color: var(--color-primary-faded);
 }
