--- a/styles/sass/pages/_projects.scss
+++ b/styles/sass/pages/_projects.scss
@@ -1,4 +1,7 @@
 @import '../abstracts/_variables.scss';
+// Imports styles for background 'circle' styles.
+@import '../abstracts/_mixins/circle';
+@import '../abstracts/_placeholders/circle';
 
 .third-page {
     display: flex;
@@ -100,59 +103,48 @@
 
 ================================= */
 
-.circle-5 {
-    position: absolute;
-    width: 15vw;
-    height: 15vw;
+.circle-Prj-1 {
+    @include circle-HeightWidth(15vw);
+    @extend %circle;
     bottom: 0;
-    right: 15rem;
+    right: 0;
 }
 
-.circle-5::before {
-    content: "";
+.circle-Prj-1::before {
+    @include circle-HeightWidth(100%);
+    @extend %circle-translated;
+    background-color: var(--color-primary);
     transform: translate(40%, 40%);
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    border-radius: 50%;
-    background-color: var(--color-primary-faded);
 }
 
-.circle-6 {
-    position: absolute;
-    width: 25vw;
-    height: 25vw;
+.circle-Prj-2 {
+    @include circle-HeightWidth(25vw);
+    @extend %circle;
+    background-color: var(--color-secondary);
+    border-radius: 50%;
     top: 10rem;
     right: 8rem;
-    border-radius: 50%;
-    background-color: var(--color-secondary-faded);
 }
 
-.circle-7 {
-    position: absolute;
-    width: 15vw;
-    height: 15vw;
+.circle-Prj-3 {
+    @include circle-HeightWidth(15vw);
+    @extend %circle;
+    background-color: var(--color-secondary);
+    border-radius: 50%;
     bottom: 32rem;
     left: 10rem;
-    border-radius: 50%;
-    background-color: var(--color-secondary-faded);
 }
 
-.circle-8 {
-    overflow: hidden;
-    position: absolute;
-    width: 10vw;
-    height: 10vw;
+.circle-Prj-4 {
+    @include circle-HeightWidth(10vw);
+    @extend %circle;
     top: 0;
     left: -5rem;
 }
 
-.circle-8::before {
-    content: "";
+.circle-Prj-4::before {
+    @include circle-HeightWidth(100%);
+    @extend %circle-translated;
+    background-color: var(--color-primary);
     transform: translate(0, -50%);
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    border-radius: 50%;
-    background-color: var(--color-primary-faded);
 }
